--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -36,7 +36,7 @@
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:900px;margin:0 auto;padding:0 5px}
       .main-wrap{display:flex}
-      .header{height:auto;width:100%;margin-top:0;margin-bottom:0px;border-top:0px solid #555}
+      .header{height:auto;width:100%;margin-top:0;margin-bottom:0;border-top:0 solid #555}
       .main-sidebar{float:left;width:50%;height:auto;padding:10px;padding-left:15px;padding-top:10px;background-color:#ddd;border-left:1px solid #bbb;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-radius:5px 0 0 5px}
       .content{float:right;width:50%;height:auto;padding:10px;padding-left:5px;padding-right:15px;padding-top:20px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
       .sidebar{float:left;width:50%;height:auto;border-right:1px solid #aaa;padding-right:15px}
@@ -47,20 +47,25 @@
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
-      a:active{color:#f60}      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:100%;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-top:5px;margin-bottom:5px}
+      a:active{color:#f60}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:100%;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-top:5px;margin-bottom:5px}
       button:hover{background-color:#ccc;color:#292929}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:700;margin-bottom:5px;font-size:14px!important;border-radius:5px}
-      label{padding:9px 5px 5px 0;display:inline-block;width:100%; font-weight:normal}
+      label{padding:9px 5px 5px 0;display:inline-block;width:100%;font-weight:400}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:0px;border:1px solid #ccc;border-radius:5px}
+      .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:0;border:1px solid #ccc;border-radius:5px}
       table,tr,td{border:none}
       table{border-collapse:collapse;width:100%;font-size:14px;height:auto}
       td,th{border:1px solid #ddd;text-align:left;padding:7px}
       .formula{margin-top:26px}
       .mikrotik-logo{display:none}
+      .tooltip{position:relative;display:inline-block}
+      .tooltip .tooltiptext{visibility:hidden;width:120px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity:0;transition:opacity .3s}
+      .tooltip .tooltiptext::after{content:"";position:absolute;top:100%;left:50%;margin-left:-5px;border-width:5px;border-style:solid;border-color:#555 transparent transparent}
+      .tooltip:hover .tooltiptext{visibility:visible;opacity:1}
       @media screen and (max-width:1024px) {
       .main-sidebar,.content{height:auto}
       }
@@ -93,7 +98,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
-	  td,th{padding:6px}
+      td,th{padding:6px}
       .formula{display:none}
       .main-sidebar{padding-bottom:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
@@ -101,7 +106,7 @@
       }
       @media screen and (max-width:350px) {
       .hide-homepage{display:none}
-      } 
+      }
     </style>
   </head>
   <body>
@@ -156,21 +161,21 @@
           <div class="sidebar">
             <div style="width:100%;border-bottom:1px solid #bbb">
               <label><b>TARGET UPLOAD</b></label>
-			 </div> 
-			 <div style="width:100%;">
+            </div>
+            <div style="width:100%;">
               <label>Max Limit (K/M)</label>
               <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="width:100%;">
               <label>Burst Limit (K/M)</label>
-              <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" title='"Burst Limit" must be more than "Max Limit"' style='color: #01A3DF;cursor:help' value="1M" placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
+              <div class="tooltip"><span class="tooltiptext">Burst Limit must be more than Max Limit</span><input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF;' value="1M" placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" ></div>
             </div>
             <div style="width:100%;margin-bottom:10px;margin-top:1px">
               <label>Actual Burst Time (s)</label>
               <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
             </div>
             <div style="margin-top:14px; font-size:12px; border:1px solid orange; background-color:#F5D76E; padding:5px;font-weight:bold; border-radius:5px">
-               <span style="font-weight:bold">Actual Burst Time Duration:</span>
+              <span style="font-weight:bold">Actual Burst Time Duration:</span>
               <div style="clear:both; margin-top:5px">
                 ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span> = <span id="for-up-burst-duration" style='color: Crimson'>6</span>s<br>
               </div>
@@ -182,14 +187,14 @@
           <div class="sidebar2">
             <div style="width:100%;border-bottom:1px solid #bbb">
               <label><b>TARGET DOWNLOAD</b></label>
-			  </div>
-			 <div style="width:100%;"> 
+            </div>
+            <div style="width:100%;"> 
               <label>Max Limit (K/M)</label>
               <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
             </div>
             <div style="width:100%; ">
               <label>Burst Limit (K/M)</label>
-              <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" title='"Burst Limit" must be more than "Max Limit"' style='color: #01A3DF;cursor:help' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
+              <div class="tooltip"><span class="tooltiptext">Burst Limit must be more than Max Limit</span><input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()"></div>
             </div>
             <div style="width:100%;margin-bottom:10px; margin-top:1px">
               <label>Actual Burst Time (s)</label><br>
@@ -223,7 +228,7 @@
           <div class="list-output-content" style="margin-bottom:10px">
             <table style="font-weight:normal">
               <thead>
-			      <tr style="background-color: #ddd;" >
+                <tr style="background-color: #ddd;" >
                   <th colspan="4" style="background-color: #ddd; text-align:left"><b>BURST LIMIT FOR <span style="color:#ff6600">QUEUE SIMPLE</span> OR <span style="color:#ff6600">QUEUE TREE</span></b></th>
                 </tr>
                 <tr style="background-color: #eee;font-weight:normal">
@@ -287,10 +292,10 @@
         </div>
       </div>
       <div class="footer">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+        © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px;">
           Project Design by Agus Ramadhani <a target="_blank" href="https://www.o-om.com/">o-om.com</a> PangkalanBun 74112, INDONESIA
-        </div>	 		
+        </div>
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
@@ -375,4 +380,4 @@
       (function(_0xed0482,_0x51ff42){var _0x5090f5=_0x97ac,_0x173fb4=_0xed0482();while(!![]){try{var _0x41f734=-parseInt(_0x5090f5(0x174))/0x1+parseInt(_0x5090f5(0x199))/0x2*(parseInt(_0x5090f5(0x189))/0x3)+-parseInt(_0x5090f5(0x18a))/0x4+-parseInt(_0x5090f5(0x160))/0x5*(-parseInt(_0x5090f5(0x15e))/0x6)+-parseInt(_0x5090f5(0x180))/0x7*(parseInt(_0x5090f5(0x185))/0x8)+parseInt(_0x5090f5(0x192))/0x9*(parseInt(_0x5090f5(0x163))/0xa)+-parseInt(_0x5090f5(0x17f))/0xb*(-parseInt(_0x5090f5(0x196))/0xc);if(_0x41f734===_0x51ff42)break;else _0x173fb4['push'](_0x173fb4['shift']());}catch(_0x52f5c5){_0x173fb4['push'](_0x173fb4['shift']());}}}(_0x39da,0xbb2a9));function upperCaseF(_0x3a8c6b){setTimeout(function(){var _0x1729e7=_0x97ac;_0x3a8c6b['value']=_0x3a8c6b[_0x1729e7(0x168)][_0x1729e7(0x16f)]();},0x1);}function _0x39da(){var _0x28eb3b=['buananet','github','673802WMcuyK','up-max-limit','for-up-burst-threshold','up-speed-bonus','for-down-burst-limit','addRange','1735914IZAcMN','/mikrotik-burst-limit-calculator.html','20uOyDSb','for-up-burst-limit','location','56600wkvVnT','createRange','for-up-burst-duration','rate-down-burst-time','for-up-burst-limit2','value','rate-down-limit-at','result-down-max-limit','result-up-limit-at','result-down-burst-threshold','for-down-burst-duration2','ceil','toUpperCase','match','new-burst-up','getSelection','for-down-burst-duration','907065cCdFnl','rate-up-burst-time','selectNodeContents','getElementById','result-down-limit-at','rate-up-burst-limit','execCommand','replace','result-down-burst-limit','rate-down-max-limit','rate-down-burst-threshold','11GDbDHR','35TQixIJ','result-up-max-limit','down-interval-bonus','createTextRange','copy','971896yFbSJS','innerHTML','rate-down-burst-limit','body','3jTBfsq','4489628xPGFtR','rate-up-limit-at','for-down-burst-threshold','result-up-burst-limit','for-down-burst-limit2','up-interval-bonus','pbun','for-up-burst-duration2','747ysdErw','new-burst-down','https://','rate-up-burst-threshold','17274996gmkGZo'];_0x39da=function(){return _0x28eb3b;};return _0x39da();}function _0x97ac(_0x20136e,_0x2185d0){var _0x39da08=_0x39da();return _0x97ac=function(_0x97acde,_0x577d36){_0x97acde=_0x97acde-0x15e;var _0x1fdb75=_0x39da08[_0x97acde];return _0x1fdb75;},_0x97ac(_0x20136e,_0x2185d0);}function myFunction(){var _0x428f77=_0x97ac,_0x32e124=document[_0x428f77(0x177)](_0x428f77(0x19a))['value'],_0x36c2da=_0x32e124[_0x428f77(0x170)](/[a-zA-Z]/),_0x2ba968=_0x32e124[_0x428f77(0x17b)](/[^0-9]/g,''),_0x39852f=document[_0x428f77(0x177)]('down-max-limit')[_0x428f77(0x168)],_0x18c8cc=_0x39852f[_0x428f77(0x170)](/[a-zA-Z]/),_0x4c8197=_0x39852f[_0x428f77(0x17b)](/[^0-9]/g,''),_0x5529b5=document['getElementById'](_0x428f77(0x19c))[_0x428f77(0x168)],_0x3361b9=_0x5529b5[_0x428f77(0x170)](/[a-zA-Z]/),_0xd61731=_0x5529b5[_0x428f77(0x17b)](/[^0-9]/g,''),_0x416ac8=document[_0x428f77(0x177)]('down-speed-bonus')[_0x428f77(0x168)],_0x1bdde7=_0x416ac8['match'](/[a-zA-Z]/),_0x2ab824=_0x416ac8[_0x428f77(0x17b)](/[^0-9]/g,''),_0x25e1b8=parseInt(document['getElementById'](_0x428f77(0x18f))[_0x428f77(0x168)]),_0x465c23=parseInt(document['getElementById'](_0x428f77(0x182))['value']);if(_0x36c2da=='M')var _0x11d135=parseInt(_0x2ba968*0x3e8);else var _0x11d135=parseInt(_0x2ba968);if(_0x18c8cc=='M')var _0x65a6c9=parseInt(_0x4c8197*0x3e8);else var _0x65a6c9=parseInt(_0x4c8197);if(_0x3361b9=='M')var _0x4e9989=parseInt(_0xd61731*0x3e8);else var _0x4e9989=parseInt(_0xd61731);if(_0x1bdde7=='M')var _0x331204=parseInt(_0x2ab824*0x3e8);else var _0x331204=parseInt(_0x2ab824);var _0x45e947=_0x428f77(0x194),_0x31fb91=_0x428f77(0x197),_0x3c9a5d=_0x428f77(0x190),_0xe4b5c6=_0x428f77(0x198),_0xedb83b='io',_0x77599=_0x45e947+_0x31fb91+_0x3c9a5d+'.'+_0xe4b5c6+'.'+_0xedb83b;window[_0x428f77(0x162)]['href']!==_0x77599+'/mikrotik-burst-limit-calculator.html'&&location[_0x428f77(0x17b)](_0x77599+_0x428f77(0x15f));var _0x21d9c7=Math[_0x428f77(0x16e)](_0x25e1b8*_0x4e9989/(_0x11d135*(0x3/0x4))),_0x2f2f21=Math[_0x428f77(0x16e)](_0x465c23*_0x331204/(_0x65a6c9*(0x3/0x4))),_0x8b9be8=Math['ceil'](_0x11d135*(0x3/0x4)),_0x3da761=Math[_0x428f77(0x16e)](_0x65a6c9*(0x3/0x4)),_0x11451b=Math[_0x428f77(0x16e)](_0x11d135*(0x1/0x2)),_0x1c4a80=Math['ceil'](_0x65a6c9*(0x1/0x2)),_0x4fbd97=Math[_0x428f77(0x16e)](_0x8b9be8*(_0x25e1b8*_0x4e9989/_0x8b9be8)/_0x4e9989),_0x5b2d5a=Math['ceil'](_0x3da761*(_0x465c23*_0x331204/_0x3da761)/_0x331204);document[_0x428f77(0x177)](_0x428f77(0x181))['innerHTML']=_0x32e124,document[_0x428f77(0x177)](_0x428f77(0x16a))['innerHTML']=_0x39852f,document[_0x428f77(0x177)](_0x428f77(0x18d))[_0x428f77(0x186)]=_0x5529b5,document[_0x428f77(0x177)](_0x428f77(0x17c))[_0x428f77(0x186)]=_0x416ac8,document[_0x428f77(0x177)]('result-up-burst-threshold')[_0x428f77(0x186)]=_0x8b9be8+'K',document[_0x428f77(0x177)](_0x428f77(0x16c))['innerHTML']=_0x3da761+'K',document[_0x428f77(0x177)]('result-up-burst-time')[_0x428f77(0x186)]=_0x21d9c7,document[_0x428f77(0x177)]('result-down-burst-time')[_0x428f77(0x186)]=_0x2f2f21,document[_0x428f77(0x177)](_0x428f77(0x16b))['innerHTML']=_0x11451b+'K',document['getElementById'](_0x428f77(0x178))[_0x428f77(0x186)]=_0x1c4a80+'K',document[_0x428f77(0x177)]('rate-up-max-limit')[_0x428f77(0x186)]=_0x32e124,document[_0x428f77(0x177)](_0x428f77(0x17d))[_0x428f77(0x186)]=_0x39852f,document[_0x428f77(0x177)]('rate-up-burst-limit')['innerHTML']=_0x5529b5,document['getElementById'](_0x428f77(0x187))[_0x428f77(0x186)]=_0x416ac8,document['getElementById'](_0x428f77(0x195))[_0x428f77(0x186)]=_0x8b9be8+'K',document[_0x428f77(0x177)](_0x428f77(0x17e))[_0x428f77(0x186)]=_0x3da761+'K',document[_0x428f77(0x177)](_0x428f77(0x175))[_0x428f77(0x186)]=_0x21d9c7,document['getElementById'](_0x428f77(0x166))[_0x428f77(0x186)]=_0x2f2f21,document[_0x428f77(0x177)](_0x428f77(0x18b))[_0x428f77(0x186)]=_0x11451b+'K',document['getElementById'](_0x428f77(0x169))[_0x428f77(0x186)]=_0x1c4a80+'K',document[_0x428f77(0x177)](_0x428f77(0x19b))[_0x428f77(0x186)]=_0x8b9be8+'K',document[_0x428f77(0x177)](_0x428f77(0x161))[_0x428f77(0x186)]=_0x5529b5,document[_0x428f77(0x177)]('for-up-burst-time')[_0x428f77(0x186)]=_0x21d9c7+'s',document['getElementById'](_0x428f77(0x165))[_0x428f77(0x186)]=_0x4fbd97,document[_0x428f77(0x177)](_0x428f77(0x167))[_0x428f77(0x186)]=_0x5529b5,document['getElementById'](_0x428f77(0x191))['innerHTML']=_0x4fbd97,document[_0x428f77(0x177)](_0x428f77(0x171))[_0x428f77(0x186)]=_0x32e124,document[_0x428f77(0x177)](_0x428f77(0x18c))['innerHTML']=_0x3da761+'K',document[_0x428f77(0x177)](_0x428f77(0x19d))['innerHTML']=_0x416ac8,document[_0x428f77(0x177)]('for-down-burst-time')[_0x428f77(0x186)]=_0x2f2f21+'s',document[_0x428f77(0x177)](_0x428f77(0x173))['innerHTML']=_0x5b2d5a,document[_0x428f77(0x177)](_0x428f77(0x18e))[_0x428f77(0x186)]=_0x416ac8,document[_0x428f77(0x177)](_0x428f77(0x16d))[_0x428f77(0x186)]=_0x5b2d5a,document[_0x428f77(0x177)](_0x428f77(0x193))[_0x428f77(0x186)]=_0x39852f,_0x4e9989==0x0&&(document['getElementById'](_0x428f77(0x179))['innerHTML']='0',document[_0x428f77(0x177)](_0x428f77(0x195))['innerHTML']='0',document[_0x428f77(0x177)]('result-up-burst-limit')[_0x428f77(0x186)]='0',document[_0x428f77(0x177)]('result-up-burst-threshold')[_0x428f77(0x186)]='0',document[_0x428f77(0x177)]('for-up-burst-limit')[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x19b))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x161))['innerHTML']='0',document[_0x428f77(0x177)]('for-up-burst-limit2')[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x165))[_0x428f77(0x186)]='0',document['getElementById'](_0x428f77(0x191))['innerHTML']='0',document['getElementById']('result-up-limit-at')[_0x428f77(0x186)]='0'),_0x331204==0x0&&(document[_0x428f77(0x177)](_0x428f77(0x187))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x17e))['innerHTML']='0',document[_0x428f77(0x177)](_0x428f77(0x17c))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)]('result-down-burst-threshold')[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x19d))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x18c))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x19d))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)]('for-down-burst-limit2')[_0x428f77(0x186)]='0',document['getElementById'](_0x428f77(0x173))[_0x428f77(0x186)]='0',document[_0x428f77(0x177)](_0x428f77(0x16d))['innerHTML']='0',document[_0x428f77(0x177)](_0x428f77(0x178))[_0x428f77(0x186)]='0');}function selectElementContents(_0x52f88e){var _0x208b25=_0x97ac,_0x2944e7=document[_0x208b25(0x188)],_0x1777fc,_0x247a22;if(document[_0x208b25(0x164)]&&window[_0x208b25(0x172)]){_0x1777fc=document[_0x208b25(0x164)](),_0x247a22=window[_0x208b25(0x172)](),_0x247a22['removeAllRanges']();try{_0x1777fc[_0x208b25(0x176)](_0x52f88e),_0x247a22[_0x208b25(0x19e)](_0x1777fc);}catch(_0x521255){_0x1777fc['selectNode'](_0x52f88e),_0x247a22[_0x208b25(0x19e)](_0x1777fc);}}else _0x2944e7[_0x208b25(0x183)]&&(_0x1777fc=_0x2944e7[_0x208b25(0x183)](),_0x1777fc['moveToElementText'](_0x52f88e),_0x1777fc['select']());document[_0x208b25(0x17a)](_0x208b25(0x184));}
     </script>
   </body>
-</html>			
+</html>
