--- a/pcc.html
+++ b/pcc.html
@@ -158,16 +158,14 @@
           </div>
           <div style="display:flex">
             <div style="width:100%;">
+
               <label>Local Options</label>
-               <span style="font-weight:normal; font-size:14px">
-			   <span class="tooltip"><span class="tooltiptext2">Under Construction !!</span><span style="color:green; font-size:18px;cursor:help">🛈</span></span>
-			   
+			  						   <span class="tooltip"><span class="tooltiptext2">Under Construction !!</span><span style="color:green; font-size:15px;cursor:help; margin:0;padding:0">🛈</span></span>
 			   <select disabled style="margin-top:5px; width:100%" id="local-list" onchange="LocalAddressOption()">
                 <option value="local-list1">Address List</option>
                 <option value="local-list2">In. Interface</option>
                 <option value="local-list3">In. Interface List</option>
               </select>
-			  
             </div>
             <div style="width:100%;margin-left:10px;">
               <label>Interface Name</label>
