--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       .column{float:left;width:50%}
       .column a{font-weight:600}
       .row:after{content:"";display:table;clear:both}
-      .member-only{cursor:help;margin-left:5px;height:13px;width:12px}
+      .member-only{margin-left:5px;height:13px;width:12px}
       .footer{margin-top:15px;text-align:center;font-size:13px}
       .show-homepage-menu{margin-bottom:3px}
       .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
@@ -262,7 +262,7 @@
         <h2>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
             <p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a></p>
@@ -272,78 +272,78 @@
         <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Recursive Gateway</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Games Static Routing</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Recursive Gateway</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Games Static Routing</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access Public IP</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access Public IP</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">PCQ Burst Rate + Queue Size Calculator</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">PCQ Burst Rate + Queue Size Calculator</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared Up-To</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared Up-To</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared Up-To</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared Up-To</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree or Queue Simple</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with Change TTL</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Wizard</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-qr-code-generator.html">Free Hotspot Wi-Fi QR Code</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-sharing-hotspot.html">Block Sharing Hotspot with Change TTL</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hotspot-wizard.html">Easy Hotspot Wizard</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Creator</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share Up-To for Hotspot</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-username-password-hotspot-generator.html">Username Password Hotspot Creator</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-share-user-multi-login.html">Bandwidth Share Up-To for Hotspot</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Netwatch to Telegram, Whatsapp, E-mail</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Netwatch to Telegram, Whatsapp, E-mail</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced MikroTik Router-OS Protection</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup to E-Mail</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/advanced-mikrotik-protection.html">Advanced MikroTik Router-OS Protection</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup to E-Mail</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with ICMP + Packet Size</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with ICMP + Packet Size</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ ROUTER-OS OTHER TOOLS</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Client</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/pcc-calculation.html">Load Balancing PCC Calculation</a><img class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Client</a><img class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><span class="tooltip"><span class="tooltiptext">Must Login First</span><img class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <h2>MIKROTIK TOOLS AND LOGO DESIGNS</h2>
